@@ -471,4 +471,6 @@
   - feature: getstate command from Martin (25.12)
   - bugfix:  at drifts for relative timespecs
   - bugfix:  Add IODev to CUL/EM/CUL_WS/HMS/KS300
+  - bugfix:  FileLog get (pgm2 plots) wont find the first row in the file
+  - feature: 00_CUL: Answer CUR requests (status/time/fht)
   - bugfix:  support for second correction factor for EMWZ in 15_CUL_EM added
